fix MVCC conflict and experiment
